# trampoline

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cross_m32.cmake
.github/workflows/: ci.yml
include/: executable_allocator.hpp  function.hpp  scoped_exit.hpp  trampoline.hpp
src/: aarch64.S  executable_allocator.cpp  trampoline.cpp  x86.S  x86.asm  x86_64.S  x86_64.asm  x86_64.gas  x86_64.masm
src/asm/: aarch64.S  arm64_aapcs_elf_gas.S  arm64_aapcs_elf_macho.S  arm64_aapcs_macho_gas.S  x86_64_ms_pe_gas.S  x86_64_ms_pe_masm.asm  x86_64_sysv_elf_gas.S  x86_ms_pe_masm.asm  x86_sysv_elf_gas.S
test/: CMakeLists.txt
test/test1/: CMakeLists.txt  Info.plist  test1.cpp
test/test2/: CMakeLists.txt  test2.cpp
test/testwin32/: CMakeLists.txt  testwin32.cpp
trampoline/: executable_allocator.cpp  trampoline.cpp
trampoline/asm/: arm64_aapcs_macho_gas.S  x86_ms_pe_masm.asm  x86_sysv_elf_gas.S
